[package]
name = "kk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.29"
directories = "6"
ratatui = "0.29"
regex = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
tempfile = "3"
textwrap = "0.16.2"

[profile.release]
codegen-units = 1
lto = true
